intTests/test_type_errors/err031.log.good
Loading file "err031.saw"
Type errors:
  err031.saw:5:9-5:13: Kind mismatch: expected * -> * but found *
  err031.saw:5:20-5:25: Error: Type mismatch.
    Expected: t.0 Int
    Found:    Bool

  err031.saw:5:9-5:17: Note: The type t.0 Int arises from this type annotation
  <type of false>:1:1-1:5: Note: The type Bool arises from this type annotation


FAILED
