intTests/test_type_errors/err031.saw
//
// Too many arguments for type constructor: Bool
//
// Currently this is a parser message; the kind mismatch message in
// the typechecker is unreachable.

let x : Bool Int = false;


